--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,31 @@
-version: "2"
+version: '2'
 
 services:
   sonarqube:
-    image: sonarqube:8.2-community
-    depends_on:
-      - db
+    image: sonarqube
     ports:
       - "9000:9000"
     networks:
       - sonarnet
     environment:
-      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      SONAR_JDBC_USERNAME: sonar
-      SONAR_JDBC_PASSWORD: sonar
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONARQUBE_JDBC_USERNAME=sonar
+      - SONARQUBE_JDBC_PASSWORD=sonar
     volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
-      - sonarqube_temp:/opt/sonarqube/temp
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+
   db:
     image: postgres
     networks:
       - sonarnet
     environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
     volumes:
       - postgresql:/var/lib/postgresql
-      # This needs explicit mapping due to https://github.com/docker-library/postgres/blob/4e48e3228a30763913ece952c611e5e9b95c8759/Dockerfile.template#L52
       - postgresql_data:/var/lib/postgresql/data
 
 networks:
@@ -35,9 +33,9 @@ networks:
     driver: bridge
 
 volumes:
+  sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
-  sonarqube_logs:
-  sonarqube_temp:
+  sonarqube_bundled-plugins:
   postgresql:
   postgresql_data:
